data/test/regression/type_check/fail/issue_60f.v
wire x;
initial begin
  $write("Too few args %d %d %d", x);
  $finish;
end
